---------------------------------------------------------------------------------------------------
Version: 0.9.1150
Date: 2021-12-24

  Features:
    - Ability to upgrade from pipes to lamps, and downgrade from lamps to pipes. Ctrl + U by default.
      Drag to upgrade, Shift + Drag to downgrade.

---------------------------------------------------------------------------------------------------
Version: 0.8.1146
Date: 2021-12-22

  Bugfixes:
    - Limit the valid signal range to 2-255, as 1 is interpreted as 255 by Factorio.
  Features:
    - Add option to configure the glow radius of the lamps.
    - Hopefully fix an issue destroying lamps that the player did not place.

---------------------------------------------------------------------------------------------------
Version: 0.7.1145
Date: 2021-11-02

  Bugfixes:
    - Fix typo that caused the mod to not work when no green signal was present
  Features:
    - Add option to have lamps provide their own power. Does require at least one lamp to be next to a power pole.

---------------------------------------------------------------------------------------------------
Version: 0.6.1145
Date: 2021-11-01

  Bugfixes:
    - Fixed previously existing lamps not working anymore (why do you do this to me Factorio...)

---------------------------------------------------------------------------------------------------
Version: 0.5.1145
Date: 2021-11-01

  Features:
    - Quick and dirty option to make substations only show a shadow (disabled by default).

---------------------------------------------------------------------------------------------------
Version: 0.4.1145
Date: 2021-11-01

  Bugfixes:
    - Fixed not being able to blueprint over active lamps

---------------------------------------------------------------------------------------------------
Version: 0.3.1145
Date: 2021-10-29

  Bugfixes:
    - Fixed error loading save with mod already present
