@@ -5,6 +5,7 @@ rgb-default-lamps-invisSub=Less visible Substations
 rgb-default-lamps-lampsHavePoles=Lamps transmit power
 rgb-default-lamps-lightSize=Area of colored light
 rgb-default-lamps-upgradePipes=Pipes upgrade to Lamps
+rgb-default-lamps-alwaysEnabled=Ignore Control Behavior
 
 [mod-setting-description]
 rgb-default-lamps-perTick=How many lamps to check with each update. Higher values might reduce UPS.
@@ -13,6 +14,7 @@ rgb-default-lamps-invisSub=Make substations less visible (just retain shadows)
 rgb-default-lamps-lampsHavePoles=Enable to make default lamps connect and conduct power (Requires pole within 2 tiles of any connected lamp)
 rgb-default-lamps-lightSize=Area that is lit up in the specified color
 rgb-default-lamps-upgradePipes=Allow to upgrade pipes to lamps, using a custom upgrade planner (Ctrl + Alt + U).
+rgb-default-lamps-alwaysEnabled=Lamps ignore control behavior settings and are always enabled if any of the R,G,B signals have a value > 1. WARNING: This will cause the default white light to be active in addition to the RGB Light!
 
 [shortcut-name]
 rgb-default-lamp-upgrade=Pipes <-> Lamps
